Apply OWASP Top 10 fixes. Refactor security filters and enhance CSRF protection by implementing origin validation for state-changing requests